# wire-universe

./: .gitignore  Cargo.toml  LICENSE  api.org  shell.nix  stuff.org  todo.org  watch.sh
assets/: index.html  main.js  script.js  styles.css
assets/modules/: canvas.js
assets/old/: index.html
assets/old/modules/: canvas.js  tiles.js
client/: Cargo.toml
client/src/: keyboard.rs  lib.rs  state.rs  util.rs
common/: Cargo.toml
common/src/: lib.rs  proto.rs
server/: Cargo.toml
server/benches/: simulate-computer.rs
server/src/: bin.rs  lib.rs  main.rs  world.rs
src/: main.rs  wireworld.rs
src/static/: index.html  script.js
