[package]
name = "wire-universe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
actix = "0.13"
actix-rt = "2.8"
actix-web-actors = "4.2"
serde = { version = "1.0", features = ["derive"] }
