[package]
name = "wire-universe_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0.93"
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
  "WebSocket",
  "MessageEvent",
  "HtmlButtonElement",
  "MouseEvent",
]

[dependencies.wire-universe]
version = "0.1.0"
path = "../common/"

[profile.release]
opt-level = "s"
