[package]
name = "wire-universe_client"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rmp-serde = "1.3"
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
  "WebSocket",
  "MessageEvent",
  "HtmlButtonElement",
  "MouseEvent",
  "KeyboardEvent",
  "WheelEvent",
  "FileReader",
  "Blob",
  "ProgressEvent",
]

[dependencies.wire-universe]
version = "0.1.0"
path = "../common/"
